functionality added to calculator

--- a/style.css
+++ b/style.css
@@ -7,12 +7,19 @@ body{
     justify-content: center;
     align-items: center;
 }
-.button-section{
-    padding-bottom: 3rem;
+.content-section{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-top-right-radius: 7%;
+    border-top-left-radius: 7%;
+    border-bottom-right-radius: 7%;
+    border-bottom-left-radius: 7%;
 }
 .button-section-content{
     display: flex;
     justify-content: space-around;
+}
+input{
+    text-align: end;
 }
 .button{
     width: 15%;
@@ -40,7 +47,3 @@ input::placeholder{
     font-size: 3rem;
 }
 
-/* <i class="fas fa-times"></i>
-<i class="fas fa-divide"></i> 
-<i class="fas fa-times"></i>
-<i class="fas fa-minus"></i>*/
